--- a/config/enki.yml
+++ b/config/enki.yml
@@ -6,5 +6,4 @@ author:
   name:    Pinball Map Blog # For copyright notice and ATOM feeds
   email:   master.cob@gmail.com # Exception emails will go here, and it is used in ATOM feeds
   open_id:                  # These are used to login to the admin area
-      - http://enkiblog.com
-      - http://secondaryopenid.com
+      - https://plus.google.com/111209230997429502793 #ssw
