--- a/config/enki.yml
+++ b/config/enki.yml
@@ -1,7 +1,7 @@
 # Configuration options for your blog - customise to taste
 # This file contains no secret information, so can be stored in source control (unlike database.yml)
 title: Pinball Map Blog
-url:   http://blog.pinballmap.com/
+url:   http://blog.pinballmap.com
 author:
   name:    Pinball Map Blog # For copyright notice and ATOM feeds
   email:   master.cob@gmail.com # Exception emails will go here, and it is used in ATOM feeds
